[gd_scene load_steps=3 format=3 uid="uid://o54xtvg58pbw"]

[ext_resource type="Script" path="res://multiplayer_map.gd" id="1_3hnfa"]
[ext_resource type="PackedScene" uid="uid://cwppbgpe3pofq" path="res://player.tscn" id="2_hc1ys"]

[node name="MultiplayerMap" type="Node2D"]
script = ExtResource("1_3hnfa")
player_scene = ExtResource("2_hc1ys")

[node name="btn_host" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Host"

[node name="tb_ip" type="TextEdit" parent="."]
offset_left = 69.0
offset_top = 42.0
offset_right = 252.0
offset_bottom = 79.0
text = "localhost"

[node name="tb_port" type="TextEdit" parent="."]
offset_left = 68.0
offset_top = 86.0
offset_right = 146.0
offset_bottom = 123.0
text = "25565"

[node name="btn_join" type="Button" parent="."]
offset_left = 64.0
offset_right = 102.0
offset_bottom = 31.0
text = "Join"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="lbl_port" type="RichTextLabel" parent="."]
offset_left = 22.0
offset_top = 90.0
offset_right = 62.0
offset_bottom = 130.0
text = "Port:"

[node name="lbl_ip" type="RichTextLabel" parent="."]
offset_left = 29.0
offset_top = 49.0
offset_right = 69.0
offset_bottom = 89.0
text = "IP:"

[connection signal="pressed" from="btn_host" to="." method="_on_btn_host_pressed"]
[connection signal="text_changed" from="tb_ip" to="." method="_on_tb_text_changed"]
[connection signal="text_changed" from="tb_port" to="." method="_on_tb_text_changed"]
[connection signal="pressed" from="btn_join" to="." method="_on_btn_join_pressed"]
